--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -7,6 +7,9 @@ body::-webkit-scrollbar {
   display: none;
 }
 
+button {
+  cursor: pointer;
+}
 
 /* Required for placeholder to show */
 .tiptap {
